--- a/src/App.css
+++ b/src/App.css
@@ -392,8 +392,6 @@
   background-color: #fdfdfd;
   display: -ms-grid;
   display: grid;
-      grid-template-areas: "back heading" "scores scores";
-  justify-items: center;
   overflow: hidden;
   position: absolute;
   left: 50%;
@@ -403,8 +401,17 @@
   border-radius: 50px;
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  height: 35rem;
-  width: 60rem;
+  width: 70%;
+  height: 70%;
+}
+
+.history-holder .flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding-top: 2rem;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
 }
 
 .history-holder .icon {
@@ -442,9 +449,6 @@
 }
 
 .history-holder .hist-back-button {
-  -ms-grid-row: 1;
-  -ms-grid-column: 1;
-  grid-area: back;
   background: white;
   border: none;
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -453,6 +457,7 @@
   font-size: 2rem;
   height: 3rem;
   width: 3rem;
+  margin: 0 -1rem 0 1rem;
   outline: none;
   cursor: pointer;
   justify-self: start;
@@ -463,7 +468,6 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-top: 3.5rem;
   margin-bottom: 1rem;
 }
 
@@ -478,18 +482,10 @@
 }
 
 .history-holder .title {
-  -ms-grid-row: 1;
-  -ms-grid-column: 2;
-  -ms-grid-column-span: 2;
-  grid-area: heading;
-  margin-left: -28rem;
+  margin: 0 auto;
 }
 
 .history-holder .scores-container {
-  -ms-grid-row: 2;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
-  grid-area: scores;
   background-color: #fdfdfd;
   display: -ms-grid;
   display: grid;
@@ -560,6 +556,9 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .history-holder .scores-container .score-list .delete-button .button-delete {
