--- a/src/App.scss
+++ b/src/App.scss
@@ -102,7 +102,6 @@
 .auth-holder {
 	background-color: rgb(253, 253, 253);
 	display: grid;
-
 	position: absolute;
 	left: 50%;
 	top: 50%;
@@ -349,10 +348,6 @@
 .history-holder {
 	background-color: rgb(253, 253, 253);
 	display: grid;
-	grid-template-areas:
-		"back heading"
-		"scores scores";
-	justify-items: center;
 	overflow: hidden;
 	position: absolute;
 	left: 50%;
@@ -360,8 +355,14 @@
 	transform: translate(-50%, -50%);
 	border-radius: 50px;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-	height: 35rem;
-	width: 60rem;
+	width: 70%;
+	height: 70%;
+
+	.flex {
+		display: flex;
+		padding-top: 2rem;
+		justify-content: space-around;
+	}
 
 	.icon {
 		font-size: 5rem;
@@ -383,7 +384,6 @@
 	}
 
 	.hist-back-button {
-		grid-area: back;
 		background: white;
 		border: none;
 		box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -391,13 +391,13 @@
 		font-size: 2rem;
 		height: 3rem;
 		width: 3rem;
+		margin: 0 -1rem 0 1rem;
 		outline: none;
 		cursor: pointer;
 		justify-self: start;
 		margin-left: 1.5rem;
 		display: flex;
 		align-items: center;
-		margin-top: 3.5rem;
 		margin-bottom: 1rem;
 
 		.button-link {
@@ -411,12 +411,10 @@
 	}
 
 	.title {
-		grid-area: heading;
-		margin-left: -28rem;
+		margin: 0 auto;
 	}
 
 	.scores-container {
-		grid-area: scores;
 		background-color: rgb(253, 253, 253);
 		display: grid;
 		justify-items: center;
@@ -469,6 +467,7 @@
 				bottom: 1rem;
 				display: flex;
 				align-items: center;
+				justify-content: center;
 
 				.button-delete {
 					color: grey;
