--- a/src/App.css
+++ b/src/App.css
@@ -262,27 +262,22 @@
   background-color: #fdfdfd;
   display: -ms-grid;
   display: grid;
-      grid-template-areas: "logo" "links";
-  justify-items: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
   position: absolute;
   left: 50%;
   top: 50%;
+  place-items: center;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   border-radius: 50px;
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  height: 31rem;
-  width: 50rem;
+  width: 70%;
 }
 
 .splash-holder .logo {
   height: 18rem;
-  margin-top: 1rem;
   border-radius: 50px;
+  margin: 2rem 0 1rem 0;
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
@@ -297,7 +292,6 @@
   color: black;
   padding: 1rem 0;
   text-align: center;
-  margin-top: -0.5rem;
 }
 
 .splash-holder .links .link:hover {
