--- a/src/App.scss
+++ b/src/App.scss
@@ -232,24 +232,19 @@
 .splash-holder {
 	background-color: rgb(253, 253, 253);
 	display: grid;
-	grid-template-areas:
-		"logo"
-		"links";
-	justify-items: center;
-	align-items: center;
 	position: absolute;
 	left: 50%;
 	top: 50%;
+	place-items: center;
 	transform: translate(-50%, -50%);
 	border-radius: 50px;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-	height: 31rem;
-	width: 50rem;
+	width: 70%;
 
 	.logo {
 		height: 18rem;
-		margin-top: 1rem;
 		border-radius: 50px;
+		margin: 2rem 0 1rem 0;
 		box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 	}
 
@@ -262,7 +257,6 @@
 			color: black;
 			padding: 1rem 0;
 			text-align: center;
-			margin-top: -0.5rem;
 
 			&:hover {
 				color: rgba(0, 0, 0, 0.25);
