--- a/src/App.scss
+++ b/src/App.scss
@@ -482,25 +482,23 @@
 
 .start-holder {
 	background-color: rgb(253, 253, 253);
-	display: grid;
-	grid-template-areas:
-		"back heading heading"
-		"player1 vs      player2"
-		"game    game    game"
-		"rounds  rounds  button";
-	justify-items: center;
-	align-items: center;
+	display: flex;
+	flex-direction: column;
 	position: absolute;
 	left: 50%;
 	top: 50%;
 	transform: translate(-50%, -50%);
 	border-radius: 50px;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-	height: 35rem;
-	width: 60rem;
+	width: 70%;
+
+	.flex {
+		display: flex;
+		padding-top: 2rem;
+		justify-content: space-around;
+	}
 
 	.start-back-button {
-		grid-area: back;
 		background: white;
 		border: none;
 		box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -508,10 +506,10 @@
 		font-size: 2rem;
 		height: 3rem;
 		width: 3rem;
+		margin: 0 -1rem 0 1rem;
 		outline: none;
 		cursor: pointer;
 		justify-self: start;
-		margin-left: 1.5rem;
 		display: flex;
 		align-items: center;
 
@@ -526,9 +524,14 @@
 	}
 
 	.heading {
-		grid-area: heading;
 		font-size: 2.5rem;
-		margin-left: -27rem;
+		margin: 0 auto;
+	}
+
+	.flex2 {
+		display: flex;
+		padding-top: 2rem;
+		justify-content: space-around;
 	}
 
 	.player-input {
@@ -537,7 +540,6 @@
 		border-radius: 50px;
 		width: 12rem;
 		text-align: center;
-		margin: 3rem;
 		height: 4rem;
 
 		input {
@@ -551,23 +553,27 @@
 	}
 
 	.player1 {
-		grid-area: player1;
 	}
 
 	.player2 {
-		grid-area: player2;
 	}
 
 	.vs {
-		grid-area: vs;
 		font-size: 2.5rem;
+		margin: 0;
+	}
+
+	.flex3 {
+		display: flex;
+		flex-direction: column;
+		place-items: center;
 	}
 
 	.game {
-		grid-area: game;
 		width: 12rem;
 		text-align: center;
 		height: 4rem;
+		margin: 2rem 0;
 
 		#game {
 			background: #f4f4f4;
@@ -598,7 +604,6 @@
 	}
 
 	.rounds {
-		grid-area: rounds;
 		width: 12rem;
 		text-align: center;
 		height: 4rem;
@@ -612,7 +617,6 @@
 			padding: 1.2rem;
 			font-size: 1.5rem;
 			cursor: pointer;
-			margin-left: 12.5rem;
 
 			&:hover {
 				color: gray;
@@ -641,11 +645,11 @@
 		height: 3rem;
 		width: 3rem;
 		outline: none;
+		align-self: flex-end;
+		margin: 2rem;
 		cursor: pointer;
 		grid-area: button;
 		justify-self: end;
-		margin-right: 2rem;
-		margin-bottom: 2rem;
 
 		.button-link {
 			color: black;
