--- a/src/App.scss
+++ b/src/App.scss
@@ -552,12 +552,6 @@
 		}
 	}
 
-	.player1 {
-	}
-
-	.player2 {
-	}
-
 	.vs {
 		font-size: 2.5rem;
 		margin: 0;
@@ -669,21 +663,13 @@
 .score-holder {
 	position: absolute;
 	display: grid;
-	grid-template-areas:
-		"back   game   game"
-		"new   best   next"
-		"status status status"
-		"score1 mid    score2";
-	justify-items: center;
-	align-items: center;
 	background-color: rgb(253, 253, 253);
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
 	border-radius: 50px;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-	height: 32rem;
-	width: 60rem;
+	width: 70%;
 	padding-bottom: 5rem;
 	overflow: hidden;
 
@@ -704,8 +690,13 @@
 		opacity: 1 !important;
 	}
 
+	.flex {
+		display: flex;
+		padding-top: 2rem;
+		justify-content: space-around;
+	}
+
 	.score-back-button {
-		grid-area: back;
 		background: white;
 		border: none;
 		box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -713,10 +704,10 @@
 		font-size: 2rem;
 		height: 3rem;
 		width: 3rem;
+		margin: 0 -1rem 0 1rem;
 		outline: none;
 		cursor: pointer;
 		justify-self: start;
-		margin-left: 1.5rem;
 		display: flex;
 		align-items: center;
 
@@ -731,8 +722,13 @@
 	}
 
 	.game-type {
-		grid-area: game;
-		margin-left: -20rem;
+		margin: 0 auto;
+	}
+
+	.flex2 {
+		display: flex;
+		padding-top: 2rem;
+		justify-content: space-around;
 	}
 
 	.new-button {
@@ -744,7 +740,6 @@
 		outline: none;
 		cursor: pointer;
 		grid-area: new;
-		margin-top: -3.5rem;
 		padding: 1rem;
 
 		&:hover {
@@ -753,8 +748,6 @@
 	}
 
 	.best-of {
-		grid-area: best;
-		margin-top: -2.5rem;
 		text-align: center;
 	}
 
@@ -766,8 +759,6 @@
 		font-size: 1.5rem;
 		outline: none;
 		cursor: pointer;
-		grid-area: next;
-		margin-top: -3.5rem;
 		padding: 1rem;
 		pointer-events: none;
 		opacity: 0;
@@ -777,21 +768,29 @@
 		}
 	}
 
+	.flex4 {
+		display: flex;
+		padding-top: 2rem;
+		justify-content: space-around;
+	}
+
 	.score1 {
-		grid-area: score1;
+	}
+
+	.flex3 {
+		display: flex;
+		flex-direction: column;
+		place-items: center;
 	}
 
 	.status {
-		grid-area: status;
 	}
 
 	.separator {
 		text-align: center;
-		grid-area: mid;
 	}
 
 	.score2 {
-		grid-area: score2;
 	}
 
 	h1 {
