--- a/src/App.css
+++ b/src/App.css
@@ -284,6 +284,7 @@
 
 .splash-holder .links {
   list-style-type: none;
+  margin-left: -1.5rem;
 }
 
 .splash-holder .links .link {
@@ -740,7 +741,7 @@
 
 .start-holder .rounds .rounds-arrow {
   position: relative;
-  right: -16.8rem;
+  right: -4.8rem;
   bottom: 2.4rem;
   font-size: 1rem;
 }
