--- a/src/App.scss
+++ b/src/App.scss
@@ -250,6 +250,7 @@
 
 	.links {
 		list-style-type: none;
+		margin-left: -1.5rem;
 
 		.link {
 			font-size: 1.5rem;
@@ -620,7 +621,7 @@
 
 		.rounds-arrow {
 			position: relative;
-			right: -16.8rem;
+			right: -4.8rem;
 			bottom: 2.4rem;
 			font-size: 1rem;
 		}
@@ -774,23 +775,14 @@
 		justify-content: space-around;
 	}
 
-	.score1 {
-	}
-
 	.flex3 {
 		display: flex;
 		flex-direction: column;
 		place-items: center;
 	}
 
-	.status {
-	}
-
 	.separator {
 		text-align: center;
-	}
-
-	.score2 {
 	}
 
 	h1 {
