--- a/src/App.scss
+++ b/src/App.scss
@@ -640,11 +640,13 @@
 		height: 3rem;
 		width: 3rem;
 		outline: none;
+		justify-self: end;
 		align-self: flex-end;
+		display: flex;
+		align-items: center;
+		justify-content: center;
 		margin: 2rem;
 		cursor: pointer;
-		grid-area: button;
-		justify-self: end;
 
 		.button-link {
 			color: black;
@@ -840,3 +842,265 @@
 }
 
 /* x Score x */
+
+/*              Viewport less then or equal to 768px            */
+
+@media only screen and (max-width: 768px) {
+	.start-holder {
+		.heading {
+			font-size: 3rem;
+		}
+
+		.vs {
+			font-size: 3rem;
+		}
+
+		.player-input {
+			width: 9rem;
+			margin: 1rem;
+		}
+		.rounds-arrow {
+			right: -13.1rem;
+			bottom: 2.5rem;
+		}
+
+		.button-start {
+			margin-top: 2rem;
+		}
+	}
+}
+
+/*        x      Viewport less then or equal to 768px       x     */
+
+/*              Viewport less then or equal to 520px            */
+
+@media only screen and (max-width: 520px) {
+	.about-holder {
+		.about-logo {
+			height: 15rem;
+			margin: 2rem 0;
+		}
+	}
+
+	.start-holder {
+		.heading {
+			font-size: 2.3rem;
+		}
+
+		.flex2 {
+			flex-direction: column;
+			align-items: center;
+		}
+
+		.vs {
+			margin: 1rem 0;
+		}
+
+		.rounds-arrow {
+			right: 1.2rem !important;
+			bottom: 0rem !important;
+		}
+
+		.button-start {
+			margin-right: 0.5rem;
+		}
+	}
+
+	.confirm-new {
+		width: 20rem;
+	}
+
+	.confirm-new-title {
+		font-size: 2rem;
+	}
+
+	.score-holder {
+		.game-type {
+			font-size: 2.5rem;
+		}
+
+		.new-button {
+			font-size: 1rem;
+			width: 5rem;
+			height: 4rem;
+		}
+
+		.next-button {
+			font-size: 1rem;
+			width: 5rem;
+			height: 4rem;
+		}
+	}
+
+	.score {
+		width: 6.5rem;
+		height: 15rem;
+
+		.plus {
+			height: 2.5rem;
+			width: 2.5rem;
+			font-size: 1.5rem;
+			margin-right: 0;
+		}
+
+		.minus {
+			height: 2.5rem;
+			width: 2.5rem;
+			font-size: 1.5rem;
+			margin-right: 0;
+		}
+
+		.player {
+			font-size: 1.2rem;
+		}
+	}
+}
+
+/*        x      Viewport less then or equal to 520px       x     */
+
+/*              Viewport less then or equal to 320px            */
+
+@media only screen and (max-width: 320px) {
+	.splash-holder {
+		.logo {
+			height: 12rem;
+		}
+
+		.links {
+			margin-left: -2rem;
+		}
+	}
+
+	.about-holder {
+		.about-logo {
+			height: 12rem;
+		}
+
+		.about-title {
+			font-size: 2.5rem;
+		}
+	}
+
+	.history-holder {
+		.title {
+			font-size: 2rem;
+		}
+	}
+
+	.start-holder {
+		.heading {
+			font-size: 1.5rem;
+		}
+
+		.vs {
+			font-size: 2rem;
+			margin: 0.2rem 0;
+		}
+
+		.player1 {
+			height: 3.3rem;
+			margin-top: -1rem;
+
+			input {
+				font-size: 1.2rem;
+			}
+		}
+
+		.player2 {
+			height: 3.3rem;
+
+			input {
+				font-size: 1.2rem;
+			}
+		}
+
+		#game {
+			font-size: 1.2rem !important;
+			height: 3.5rem;
+			margin-top: -1.5rem;
+		}
+
+		#rounds {
+			font-size: 1.2rem !important;
+			height: 3.5rem;
+			margin-top: -1.5rem;
+		}
+
+		.rounds-arrow {
+			right: -6.1rem !important;
+			bottom: 2.2rem !important;
+		}
+
+		.button-start {
+			margin-right: 1rem;
+			margin-top: -1rem;
+		}
+	}
+
+	.confirm-new {
+		width: 15rem;
+	}
+
+	.confirm-new-title {
+		font-size: 2rem;
+	}
+
+	.game-type {
+		font-size: 2.5rem;
+	}
+
+	.new-button {
+		font-size: 1rem;
+		width: 5rem;
+		height: 4rem;
+	}
+
+	.next-button {
+		font-size: 1rem;
+		width: 5rem;
+		height: 4rem;
+	}
+
+	.score-holder {
+		width: 85%;
+
+		.game-type {
+			font-size: 1.5rem;
+		}
+
+		.best-of {
+			font-size: 1.2rem;
+		}
+
+		.status {
+			font-size: 1.2rem;
+		}
+	}
+
+	.score {
+		width: 5rem;
+		grid-template-areas:
+			"score"
+			"plus"
+			"minus";
+
+		.curr-score {
+			grid-area: score;
+			margin-top: 0.5rem;
+			font-size: 3.5rem;
+		}
+
+		.plus {
+			grid-area: plus;
+			margin-left: 1rem;
+		}
+
+		.minus {
+			grid-area: minus;
+			margin-top: 0.5rem;
+			margin-left: 1rem;
+		}
+	}
+}
+
+/*        x      Viewport less then or equal to 320px       x     */
