--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,7 @@
   padding: 0.5rem;
   outline: none;
   cursor: pointer;
+  z-index: 5;
 }
 
 .toggle:hover {
@@ -175,6 +176,10 @@
   cursor: pointer;
 }
 
+.auth-holder .toggler:hover {
+  background: #e4e4e4;
+}
+
 .auth-holder .toggler .button-link {
   color: black;
 }
@@ -229,6 +234,40 @@
 
 .auth-holder .submit:hover {
   background: #e4e4e4;
+}
+
+.auth-holder .icon {
+  font-size: 5rem;
+  color: gray;
+  position: absolute;
+  top: 50%;
+  left: 45%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  -webkit-animation: spinLogo 2s infinite ease-out;
+          animation: spinLogo 2s infinite ease-out;
+}
+
+@-webkit-keyframes spinLogo {
+  from {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  to {
+    -webkit-transform: rotate(359deg);
+            transform: rotate(359deg);
+  }
+}
+
+@keyframes spinLogo {
+  from {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  to {
+    -webkit-transform: rotate(359deg);
+            transform: rotate(359deg);
+  }
 }
 
 .notice {
@@ -441,17 +480,6 @@
           transform: translate(-50%, -50%);
   -webkit-animation: spinLogo 2s infinite ease-out;
           animation: spinLogo 2s infinite ease-out;
-}
-
-@-webkit-keyframes spinLogo {
-  from {
-    -webkit-transform: rotate(0deg);
-            transform: rotate(0deg);
-  }
-  to {
-    -webkit-transform: rotate(359deg);
-            transform: rotate(359deg);
-  }
 }
 
 @keyframes spinLogo {
