--- a/src/App.scss
+++ b/src/App.scss
@@ -210,7 +210,7 @@
 	height: 95vh;
 	display: grid;
 	background: rgba(255, 255, 255, 0.9);
-	position: relative;
+	position: absolute;
 	opacity: 0;
 
 	.status-block-success {
@@ -250,7 +250,7 @@
 	display: grid;
 	background: rgba(255, 255, 255, 0.9);
 	position: relative;
-	z-index: 10;
+	z-index: 5;
 
 	.icon {
 		font-size: 5rem;
