--- a/src/App.css
+++ b/src/App.css
@@ -964,6 +964,7 @@
   padding-top: 2rem;
   -ms-flex-pack: distribute;
       justify-content: space-around;
+  text-align: center;
 }
 
 .score-holder .flex3 {
@@ -1000,7 +1001,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin: 0 1rem;
+  margin: 0 0.5rem;
 }
 
 .score .done {
@@ -1108,7 +1109,7 @@
     height: 4rem;
   }
   .score {
-    width: 6.5rem;
+    width: 6.9rem;
     height: 15rem;
   }
   .score .plus {
