--- a/src/App.css
+++ b/src/App.css
@@ -997,10 +997,7 @@
   border-radius: 50px;
   width: 10rem;
   height: 16rem;
-  justify-items: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  place-items: center;
   margin: 0 0.5rem;
 }
 
@@ -1218,27 +1215,18 @@
   }
   .score {
     width: 5rem;
-        grid-template-areas: "score" "plus" "minus";
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
   .score .curr-score {
-    -ms-grid-row: 1;
-    -ms-grid-column: 1;
-    grid-area: score;
-    margin-top: 0.5rem;
+    margin-top: 1rem;
     font-size: 3.5rem;
   }
-  .score .plus {
-    -ms-grid-row: 2;
-    -ms-grid-column: 1;
-    grid-area: plus;
-    margin-left: 1rem;
-  }
   .score .minus {
-    -ms-grid-row: 3;
-    -ms-grid-column: 1;
-    grid-area: minus;
-    margin-top: 0.5rem;
-    margin-left: 1rem;
+    margin-top: 1rem;
+    margin-left: 0.1rem;
   }
 }
 
