--- a/src/App.scss
+++ b/src/App.scss
@@ -19,6 +19,14 @@
 	}
 }
 
+.user-holder {
+	.user {
+		position: absolute;
+		right: 3rem;
+		top: 3rem;
+	}
+}
+
 .auth-link {
 	position: absolute;
 	background: white;
