--- a/src/App.scss
+++ b/src/App.scss
@@ -15,7 +15,9 @@
 	z-index: 5;
 
 	&:hover {
-		border: solid 1px black;
+		background: gray;
+		color: white;
+		border: solid 2px rgb(156, 156, 156);
 	}
 }
 
@@ -39,7 +41,9 @@
 	cursor: pointer;
 
 	&:hover {
-		border: solid 1px black;
+		background: gray;
+		color: white;
+		border: solid 2px rgb(156, 156, 156);
 	}
 }
 
