--- a/src/App.css
+++ b/src/App.css
@@ -25,7 +25,7 @@
 
 .user-holder .user {
   position: absolute;
-  right: 2.5rem;
+  left: 1rem;
   top: 3rem;
 }
 
@@ -39,6 +39,7 @@
   outline: none;
   right: 1rem;
   cursor: pointer;
+  z-index: 5;
 }
 
 .auth-link:hover {
