Updates font size.

--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,7 @@
   position: absolute;
   left: 1rem;
   top: 3rem;
+  font-size: 1rem;
 }
 
 .auth-link {
@@ -1071,6 +1072,9 @@
 /*        x      Viewport less then or equal to 768px       x     */
 /*              Viewport less then or equal to 520px            */
 @media only screen and (max-width: 520px) {
+  .user-holder .user {
+    font-size: 0.7rem;
+  }
   .about-holder .about-logo {
     height: 15rem;
     margin: 2rem 0;
@@ -1140,6 +1144,9 @@
 /*        x      Viewport less then or equal to 520px       x     */
 /*              Viewport less then or equal to 320px            */
 @media only screen and (max-width: 320px) {
+  .user-holder .user {
+    font-size: 0.5rem;
+  }
   .splash-holder .logo {
     height: 12rem;
   }
