--- a/src/App.css
+++ b/src/App.css
@@ -543,10 +543,15 @@
   position: relative;
 }
 
-.history-holder .scores-container .score-list {
+.history-holder .scores-container .flip {
+  width: 100%;
+}
+
+.history-holder .scores-container .flip .score-list {
   display: -ms-grid;
   display: grid;
   justify-items: center;
+  margin: 0 auto;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -562,25 +567,25 @@
   overflow-x: auto;
 }
 
-.history-holder .scores-container .score-list .flex {
+.history-holder .scores-container .flip .score-list .flex {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.history-holder .scores-container .score-list .flex .history-winner {
+.history-holder .scores-container .flip .score-list .flex .history-winner {
   color: #b0ffa9;
 }
 
-.history-holder .scores-container .score-list .flex .separator {
+.history-holder .scores-container .flip .score-list .flex .separator {
   padding: 0 0.3rem;
 }
 
-.history-holder .scores-container .score-list .flex .history-loser {
+.history-holder .scores-container .flip .score-list .flex .history-loser {
   color: #ffa9a9;
 }
 
-.history-holder .scores-container .score-list .delete-button {
+.history-holder .scores-container .flip .score-list .delete-button {
   background: white;
   border: none;
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
@@ -606,11 +611,11 @@
           justify-content: center;
 }
 
-.history-holder .scores-container .score-list .delete-button .button-delete {
+.history-holder .scores-container .flip .score-list .delete-button .button-delete {
   color: grey;
 }
 
-.history-holder .scores-container .score-list .delete-button .button-delete:hover {
+.history-holder .scores-container .flip .score-list .delete-button .button-delete:hover {
   -webkit-transition: 0.00001s ease;
   transition: 0.00001s ease;
   color: gray;
