--- a/src/App.scss
+++ b/src/App.scss
@@ -463,58 +463,63 @@
 		overflow-y: scroll;
 		position: relative;
 
-		.score-list {
-			display: grid;
-			justify-items: center;
-			align-items: center;
-			border-radius: 50px;
-			box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-			width: 80%;
-			height: max-content;
-			background-color: #f4f4f4;
-			margin-bottom: 3rem;
-			overflow-x: auto;
+		.flip {
+			width: 100%;
 
-			.flex {
-				display: flex;
-
-				.history-winner {
-					color: rgb(176, 255, 169);
-				}
-
-				.separator {
-					padding: 0 0.3rem;
-				}
-
-				.history-loser {
-					color: rgb(255, 169, 169);
-				}
-			}
-
-			.delete-button {
-				background: white;
-				border: none;
-				box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-				border-radius: 50%;
-				font-size: 2rem;
-				height: 3rem;
-				width: 3rem;
-				outline: none;
-				cursor: pointer;
-				position: relative;
-				justify-self: end;
-				right: 1rem;
-				bottom: 1rem;
-				display: flex;
+			.score-list {
+				display: grid;
+				justify-items: center;
+				margin: 0 auto;
 				align-items: center;
-				justify-content: center;
+				border-radius: 50px;
+				box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+				width: 80%;
+				height: max-content;
+				background-color: #f4f4f4;
+				margin-bottom: 3rem;
+				overflow-x: auto;
 
-				.button-delete {
-					color: grey;
+				.flex {
+					display: flex;
 
-					&:hover {
-						transition: 0.00001s ease;
-						color: gray;
+					.history-winner {
+						color: rgb(176, 255, 169);
+					}
+
+					.separator {
+						padding: 0 0.3rem;
+					}
+
+					.history-loser {
+						color: rgb(255, 169, 169);
+					}
+				}
+
+				.delete-button {
+					background: white;
+					border: none;
+					box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+					border-radius: 50%;
+					font-size: 2rem;
+					height: 3rem;
+					width: 3rem;
+					outline: none;
+					cursor: pointer;
+					position: relative;
+					justify-self: end;
+					right: 1rem;
+					bottom: 1rem;
+					display: flex;
+					align-items: center;
+					justify-content: center;
+
+					.button-delete {
+						color: grey;
+
+						&:hover {
+							transition: 0.00001s ease;
+							color: gray;
+						}
 					}
 				}
 			}
